k8s-apps/registry/05-registry-ui-service.yml
apiVersion: v1
kind: Service
metadata:
  name: registry-ui
  namespace: registry
spec:
  selector:
    app: registry-ui
  ports:
    - port: 80
      targetPort: 80
