k8s-apps/registry/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry
  namespace: registry
spec:
  rules:
    - host: registry.k8s.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry
                port:
                  number: 5000
    - host: registry-ui.k8s.homelab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui
                port:
                  number: 80
